# reflection-mcp

./: .coderabbit.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/docs/: pr-review-notes.md
.githooks/: pre-commit
.github/workflows/: ci.yml
.plans/: 001-use-embeddings.md  002-cross-mcp-improvements.md  libsql-migration.md
docs/: CODE_REVIEW.md
src/reflection_mcp/: __init__.py  server.py
tests/: test_server.py
