[project]
name = "reflection-mcp"
version = "0.2.0"
description = "Self-reflection MCP server with persistent episodic memory and lesson effectiveness tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "libsql-experimental>=0.0.50",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.0",
]

[project.scripts]
reflection-mcp = "reflection_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reflection_mcp"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
# Strict checks for None handling
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
# Catch possibly unbound variables
reportPossiblyUnboundVariable = "error"
reportUnusedImport = "error"
reportUnusedVariable = "warning"
